--- a/style.css
+++ b/style.css
@@ -6988,6 +6988,44 @@ a.notification-dismiss {
   height: 40px;
 }
 
+/* Brand Buttons */
+
+.topbar .btn {
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: 600;
+  border-width: 2px;
+  border-radius: 4px;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.btn-success {
+  color: #fff;
+  background-color: $brand_primary;
+  border-color: $brand_primary;
+}
+
+.btn-success:hover {
+  color: #fff;
+  background-color: #00844f;
+  border-color: #007747;
+}
+
+.btn-outline-success {
+  color: $brand_primary;
+  background-color: transparent;
+  border-color: $brand_primary;
+}
+
+.btn-outline-success:hover {
+  color: #fff;
+  background-color: $brand_primary;
+  border-color: $brand_primary;
+}
 
 /* Homepage */
 
